Created library and imported

--- a/usuarios/src/main/resources/application.properties
+++ b/usuarios/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql=true
 
 logging.level.com.netflix.eureka=DEBUG
 logging.level.com.netflix.discovery=DEBUG
+
+config.balanceador.test=${BALANCEADOR_TEST: string por defecto}
